--- a/src/javafx_experimental_application/Login.fxml
+++ b/src/javafx_experimental_application/Login.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="335.0" prefWidth="550.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="javafx_experimental_application.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="335.0" prefWidth="550.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="javafx_experimental_application.LoginController">
     <children>
         <Button fx:id="button" layoutX="387.0" layoutY="290.0" onAction="#handleButtonAction" text="Login" />
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
